==> embeddip/embedDIP/input/serial/stm32_uart.c <==
#include "serial.h"
#include "stm32f7xx_hal.h"
#include <stdio.h>
#include <stdarg.h>

// Use the UART handle generated by STM32CubeMX
extern UART_HandleTypeDef huart1;

static void serial_init(void)
{
    // Optional reinitialization
}

static void serial_capture(Image *img)
{

    uint8_t request_start_sequence[3] = "STR";

    uint16_t _blocksize = 65535, _lastblocksize = 0;
    uint32_t i = 0, _blockCount = 0;

    uint16_t sizear[3] = {img->width, img->height, img->format};

    if (img->size < 65536)
        _blocksize = img->size;

    _blockCount = img->size / _blocksize;
    _lastblocksize = (uint16_t)(img->size % _blocksize);

    HAL_UART_Transmit(&huart1, request_start_sequence, 3, HAL_MAX_DELAY);
    HAL_Delay(1);
    HAL_UART_Transmit(&huart1, (uint8_t *)(&img->width), sizeof(uint16_t), HAL_MAX_DELAY);
    HAL_UART_Transmit(&huart1, (uint8_t *)(&img->height), sizeof(uint16_t),
                      HAL_MAX_DELAY);
    HAL_UART_Transmit(&huart1, (uint8_t *)(&img->format), sizeof(uint16_t),
                      HAL_MAX_DELAY);

    for (i = 0; i < _blockCount; i++)
        HAL_UART_Receive(&huart1, img->pixels_u8 + (i * _blocksize), _blocksize,
                         HAL_MAX_DELAY);

    if (_lastblocksize)
        HAL_UART_Receive(&huart1, img->pixels_u8 + (i * _blocksize),
                         _lastblocksize, HAL_MAX_DELAY);

    return;
}

static void serial_send(const Image *img)
{
    uint8_t request_start_sequence[3] = "STW";

    uint16_t _blocksize = 65535, _lastblocksize = 0;
    uint32_t i = 0, _blockCount = 0;

    if (img->size < 65536)
        _blocksize = img->size;

    _blockCount = img->size / _blocksize;
    _lastblocksize = (uint16_t)(img->size % _blocksize);

    HAL_UART_Transmit(&huart1, request_start_sequence, 3, HAL_MAX_DELAY);
    HAL_Delay(1);
    HAL_UART_Transmit(&huart1, (uint8_t *)(&img->width), sizeof(uint16_t), HAL_MAX_DELAY);
    HAL_UART_Transmit(&huart1, (uint8_t *)(&img->height), sizeof(uint16_t),
                      HAL_MAX_DELAY);
    HAL_UART_Transmit(&huart1, (uint8_t *)(&img->format), sizeof(uint8_t),
                      HAL_MAX_DELAY);
    HAL_Delay(200);
    for (i = 0; i < _blockCount; i++)
        HAL_UART_Transmit(&huart1, img->pixels_u8 + (i * _blocksize), _blocksize,
                          HAL_MAX_DELAY);

    if (_lastblocksize)
        HAL_UART_Transmit(&huart1, img->pixels_u8 + (i * _blocksize),
                          _lastblocksize, HAL_MAX_DELAY);
}

int _write(int file, char *ptr, int len)
{
    for (int i = 0; i < len; i++)
    {
        HAL_UART_Transmit(&huart1, (uint8_t *)&ptr[i], 1, HAL_MAX_DELAY);
    }
    return len;
}

// Define the object
serial_t stm32_uart = {
    .init = serial_init,
    .capture = serial_capture,
    .send = serial_send};
